cleanup signature api api shows status information on ep /status git commit hash is passed from docker
